# curIAtor

./: .dockerignore  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.workspace  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  gallery.yaml  pyproject.toml  requirements.txt
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  example_collection.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
curiator/: __init__.py  agent_capabilities.py  annotations.py  app_cli.py  auth.py  auth_cli.py  browser_smoke.py  capability_cli.py  cli.py  collection_cli.py  config.py  dependencies.py  design_refs.py  galleries_cli.py  gitmem.py  ledger.py  narrative.py  proposal_cli.py  proposals.py  release_cli.py  replay.py  replay_cli.py  replay_lab.py  run_cli.py  run_manifest.py  run_recovery.py  serve_cli.py  stats.py  stats_cli.py  transcripts.py  web_paths.py  workflow_cli.py  workspace_bootstrap.py  workspace_cli.py  workspace_credential.py  workspace_entry.py  workspace_init.py  workspace_meta.py  workspace_seed.py  workspace_store.py  (+1 more)
curiator/cli/: __init__.py  __main__.py
curiator/loop/: __init__.py  feedback_watch.sh  loop.py  runlog.py  task_template.md
curiator/loop/adapters/: __init__.py  api.py  codex.py  command.py  headless_cc.py
curiator/shell/: __init__.py  app_shell.py  registry.py  web_shell.py
curiator/shell/assets/: __init__.py  capture.js  localtime.js  mobile_responsive.js  react_shell.css  react_shell.js  shell.css
curiator/voice/: __init__.py  cli.py  faster_whisper.py
docs/: DEMO_SCRIPT.md  DESIGN.md  EXTRACTION_SCOPE.md  GOOD_FIRST_ISSUES.md  PUBLIC_PLAYGROUND_DEPLOYMENT.md  RELEASE.md  SCREENSHOT_CAPTURE.md  USING_CURIATOR.md
docs/backlog/: README.md  annotated-feedback.md  cli-modularization.md  curiator-ml.md  games-collection.md  general-app-hosting.md  math-geometry-collection.md  nodered-overlay.md  ot-digital-twin.md  ot-hmi-demo.md  per-run-branches.md  phylogenetics-collection.md  public-playground.md  public-release.md  voice-feedback.md  zenodo-paper.md
docs/backlog/completed/: README.md  curiator-ml.md  general-app-hosting.md  math-geometry-collection.md  nodered-overlay.md  ot-hmi-demo.md  phylogenetics-collection.md  public-playground.md
docs/backlog/skipped/: README.md  curiator-ml.md  games-collection.md  general-app-hosting.md  ot-digital-twin.md  phylogenetics-collection.md  public-playground.md  public-release.md  zenodo-paper.md
docs/paper/: README.md  curiator-paper.md  reproducibility.md
docs/paper/figures/: feedback-loop.mmd  provenance-log-excerpt.md  render_feedback_loop.py  render_ot_before_after.py  render_provenance_log_excerpt.py  render_shell_feedback_panel.py
examples/dash/: aviato.py  cohort_explorer.py  sales_overview.py
feedback/: .gitignore
galleries/: .gitignore  README.md
ops/curiator.net/: README.md  curiator-tunnel-healthcheck  rathole-sietch-healthcheck.service  rathole-sietch-healthcheck.timer
scripts/: capture_demo_gif.py  check_release_docs.py  dogfood_annotations_brave.py  dogfood_narrated_feedback_brave.py  prepare_release.py  render_demo_gif.py  smoke_release_package.py  update_paper_stats.py
tests/: conftest.py  test_adapters.py  test_annotations.py  test_approval_workflow.py  test_auth.py  test_cli_app_create.py  test_cli_doctor.py  test_cli_galleries.py  test_cli_gallery_arg.py  test_cli_init.py  test_cli_interactive.py  test_cli_playground_preflight.py  test_cli_release_preflight.py  test_cli_smoke.py  test_cli_voice.py  test_config.py  test_dependencies.py  test_design_refs.py  test_gitmem.py  test_ledger.py  test_loop.py  test_metadata.py  test_narrative.py  test_paper_stats.py  test_proposals.py  test_registry.py  test_release_docs.py  test_release_package_smoke.py  test_release_prepare.py  test_replay.py  test_run_recovery.py  test_seed.py  test_shell.py  test_stats.py  test_transcripts.py  test_web_paths.py  test_web_shell.py  test_workspace_bootstrap.py  test_workspace_credential.py  test_workspace_entry.py  (+2 more)
