[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "curiator"
version = "0.2.0"
description = "An AI-maintained web app overlay — comment + screenshot a live app, and a coding agent fixes it."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Adam Guetz" }]
keywords = ["web-apps", "dash", "react", "gallery", "ai-agent", "feedback", "dashboards"]
dependencies = [
  "dash>=2.14",
  "plotly>=5.18",
  "flask>=3.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "build>=1.2", "twine>=5.0"]
demo = ["pillow>=10"]
oidc = ["authlib>=1.3"]      # only for auth.mode: oidc (header/none need nothing extra)
voice = ["faster-whisper>=1.1"]

[project.urls]
Homepage = "https://github.com/LearnedResponse/curiator"
Source = "https://github.com/LearnedResponse/curiator"

[project.scripts]
curiator = "curiator.cli:main"

[tool.setuptools]
packages = [
  "curiator",
  "curiator.cli",
  "curiator.shell",
  "curiator.shell.assets",
  "curiator.loop",
  "curiator.loop.adapters",
  "curiator.voice",
]

[tool.setuptools.package-data]
"curiator.shell.assets" = ["*"]
"curiator.loop" = ["task_template.md"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Real-bug lint (syntax errors + pyflakes: undefined names, unused imports, f-string mistakes) —
# meaningful without style bikeshedding, so `build passing` stays honest.
select = ["E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
